[gd_scene load_steps=2 format=3 uid="uid://2gr1vf6x5kgr"]

[ext_resource type="Script" path="res://enemies/enemy-spawner/spawner.gd" id="1_jqv78"]

[node name="Spawner" type="Node2D"]
position = Vector2(0, -55)
script = ExtResource("1_jqv78")

[node name="LeftSpawnContainer" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="LeftSpawnContainer"]
position = Vector2(-32, 77)

[node name="2" type="Marker2D" parent="LeftSpawnContainer"]
position = Vector2(-32, 109)

[node name="3" type="Marker2D" parent="LeftSpawnContainer"]
position = Vector2(-32, 142)

[node name="4" type="Marker2D" parent="LeftSpawnContainer"]
position = Vector2(-32, 173)

[node name="RightSpawnContainer" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="RightSpawnContainer"]
position = Vector2(290, 77)

[node name="2" type="Marker2D" parent="RightSpawnContainer"]
position = Vector2(290, 109)

[node name="3" type="Marker2D" parent="RightSpawnContainer"]
position = Vector2(290, 142)

[node name="4" type="Marker2D" parent="RightSpawnContainer"]
position = Vector2(290, 173)

[node name="SpawnEnemyTimer" type="Timer" parent="."]
wait_time = 5.25
autostart = true

[node name="SpawnPersonTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="SpawnEnemyTimer" to="." method="_on_spawn_enemy_timer_timeout"]
[connection signal="timeout" from="SpawnPersonTimer" to="." method="_on_spawn_person_timer_timeout"]
